Fix: centered the text element and deleted z-index from everywhere except 'text' element

--- a/src/components/Cover/Cover.module.css
+++ b/src/components/Cover/Cover.module.css
@@ -1,6 +1,5 @@
 .wrapper {
     text-decoration: none;
-    overflow: auto;
     display: grid;
     margin-top: 66px;
     opacity: 1;
@@ -11,7 +10,6 @@
     grid-column: 1;
     opacity: 0.3;
     background-color: #2A2C2F;
-    z-index: 1;
 }
 
 .wrapper:hover .rectangle {
@@ -24,18 +22,18 @@
     grid-column: 1;
     width: 100%;
     height: 100%;
-    z-index:0;
 }
 
 .text {
     grid-row: 1;
     grid-column: 1;
     z-index: 2;
+    margin: auto;
 }
 
 .title {
     max-width: 238px;
-    margin: 33px auto 0 auto;
+    margin: auto;
     color: white;
     text-align: center;
     font-family: "InterBlack";
@@ -45,6 +43,7 @@
 
 .subtitle {
     margin: auto;
+    margin-top: 16px;
     color: white;
     text-align:center;
     font-family: "InterRegular";
@@ -56,7 +55,6 @@
 @media (min-width: 768px) {
     .title {
         max-width: 560px;
-        margin-top: 115px;
         font-size: 72px;
         line-height: 76px;
     }
@@ -69,18 +67,10 @@
     }
 }
 
-@media (min-width: 1024px) {
-    .title {
-        margin-top: 195px;
-    }
-}
 
 @media (min-width: 1280px) {
     .wrapper {
         margin: auto;
         max-width: 1184px;
-    }
-    .title {
-        margin-top: 245px;
     }
 }
